--- a/slider/src/index.html
+++ b/slider/src/index.html
@@ -14,5 +14,6 @@
         </div>
       <footer></footer>
     </div>
-  <body>
+    <%= htmlWebpackPlugin.files.webpackManifest %>
+  </body>
 </html>
