--- a/slider/src/index.html
+++ b/slider/src/index.html
@@ -18,13 +18,11 @@
           <div class="slider__arrow slider__arrow--right"></div>
           <div class="slider__arrow slider__arrow--left"></div>
 
-          <nav>
-            <ul>
-              <li>Zdjecie 1</li>
-              <li>Zdjecie 2</li>
-              <li>Zdjecie 3</li>
+            <ul class="slider__nav">
+              <li class="slider__nav__item">Zdjecie 1</li>
+              <li class="slider__nav__item">Zdjecie 2</li>
+              <li class="slider__nav__item">Zdjecie 3</li>
             </ul>
-          </nav>
 
         </div>
       </div>
